RESOLVED FIXED49663
Web Inspector: name-only property appears in style declaration but not in the Styles pane
https://bugs.webkit.org/show_bug.cgi?id=49663
Summary Web Inspector: name-only property appears in style declaration but not in the...
Alexander Pavlov (apavlov)
Reported 2010-11-17 07:13:01 PST
This is observed with the latest migration of the CSS editing framework to the source-based approach. To reproduce: 1. In an "element.style" style, add an invalid name-only property, e.g. "baz". 2. The "baz;" property is appended to the "style" property value but does not appear in the "element.style" style declaration.
Attachments
[PATCH] Suggested fix (3.01 KB, patch)
2010-12-01 05:55 PST, Alexander Pavlov (apavlov)
yurys: review+
Alexander Pavlov (apavlov)
Comment 1 2010-12-01 05:55:12 PST
Created attachment 75268 [details] [PATCH] Suggested fix
Alexander Pavlov (apavlov)
Comment 2 2010-12-01 06:14:57 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/inspector/styles-new-API.html M WebCore/ChangeLog M WebCore/inspector/InspectorStyleSheet.cpp Committed r73018
Note You need to log in before you can comment on or make changes to this bug.