2010-12-01  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: name-only property appears in style declaration but not in the Styles pane
        https://bugs.webkit.org/show_bug.cgi?id=49663

        Check that at least one property has been parsed from the user input.

        WebCore:
        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyle::setPropertyText):

        LayoutTests:
        * inspector/styles-new-API.html:


Canonical link: https://commits.webkit.org/63469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73018 268f45cc-cd09-0410-ab3c-d52691b4dbfc